Version 2.4.1
03-06-2015

[Feature] - Added option to upgrade only the distribution packages installed.

[Updated] - Fixed upgrade packages.
          - Fixed checksum on/off.


Version 2.4.0
02-06-2015

[Updated] - Updated comments arguments to '--help' option.

[Feature] - Added additional option to skip packages when upgrading.

Version 2.3.6
30-05-2015

[Updated] - Fixed to avoid input the first package for searching when input multiple 
            packages together with the option '-F'.


Version 2.3.5
30-05-2015

[Updated] - Added version for SBo packages when search with option
            '-F'.


Version 2.3.4
28-05-2015

[Updated] - Fix arguments comments.
          - Update compression slackbuild package.
          - Fix binary dependencies and sizes.
          - Fix pylint errors.
          - Update 'rlw' repository package dependencies.

[Feature] - Added to find packages from enabled repositories.
          - Added script to remove data. (clean.py)


Version 2.3.3
23-05-2015

[Updated] - Fix 'ZeroDivisionError:' for binary package install.
          - Fix 'OSError:' if path not exist.

Version 2.3.2
21-05-2015

[Updated] - Update arguments and options.
          - Remove view package version when upgrade because conflict with
            some packages with the same name.
          - Update file license.

Version 2.3.1
14-05-2015

[Feature] - Added the ability to sync with slackpkg and slpkg to update the 
            file ChangeLog.txt when upgrading distribution.

Version 2.3.0
07-05-2015

[Updated] - Bugfix: Find package error #13
            Thanks 'lucashpandolfo' for reporting.

Version 2.2.9
24-4-2015

[Updated] - Fix reference installed packages after distribution upgrade.
          - Fix double reference after already installed SBo packages.
          - Fix clear master SBo packages.

Version 2.2.8
23-4-2015

[Updated] - Fix added new packages when upgrad.
          - Fix man page.