@@ -66,7 +66,7 @@ REMOVE_DEPS_ANSWER=n
 # If you want build UNSUPPORTED or UNTESTED packages choose 'y'.
 SKIP_UNST=n
 
-# If you want to disable resovle dependencies choose 'off'.
+# If you want to disable automatic resovle dependencies choose 'off'.
 RSL_DEPS=on
 
 # Delete package dependencies if DEL_DEPS is on.
